<resources>
    <string name="app_name">Movies Info</string>
    <string name="list_of_movies">List of movies</string>
    <string name="change_filters_button">Change filters</string>
    <string name="deadpool_plot">Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy\'s life.</string>
    <string name="deadpool_actors">Josh Brolin, Ryan Reynolds, Morena Baccarin, Zazie Beetz</string>
    <string name="deadpool_2">Deadpool 2</string>
    <string name="genre">Genres: Action, Adventure</string>
    <string name="change_filters">Change filters:</string>
    <string name="save_filters">Save filters</string>
    <string name="date_from">Date from:</string>
    <string name="date_to">Date to:</string>
    <string name="language">Language</string>
    <string name="production_house">Production house</string>
    <string name="filter_group">FilterGroup</string>
    <string name="rating_text">Rating:</string>
    <string name="ryan_reynolds">Ryan Reynolds</string>
    <string name="wade_wilson">Wade Wilson</string>
    <string name="actors">Actors</string>
    <string name="movie_pictures">Movie Pictures</string>
    <string name="no_movies">No movies found!</string>
    <string name="search">Search</string>
    <string name="clear_filters">Clear filters</string>
    <string name="overview">Overview</string>
    <string name="_06_09_2018">Release date: 06.09.2018.</string>
    <string name="movie_details">Movie Details</string>
    <string name="_2018">(2018)</string>
    <string name="biography">Biography</string>
    <string name="filmography">Filmography</string>
    <string name="no_biography_error_message">Biography is not available at the moment.</string>
</resources>
