<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity"
    tools:context=".activity.FiltersActivity">

    <LinearLayout
        style="@style/wh_match_wrap"
        android:orientation="vertical">

        <RelativeLayout style="@style/wh_match_wrap">
            <TextView
                style="@style/wh_match_wrap.medium_headline"
                android:layout_toLeftOf="@+id/clear_filters"
                android:layout_toStartOf="@+id/clear_filters"
                android:text="@string/change_filters" />

            <Button
                android:id="@+id/clear_filters"
                style="@style/wh_wrap.small_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/clear_filters" />
        </RelativeLayout>

        <View style="@style/line.thick" />

        <com.singidunum.moviesinfoapp.view.ListFilterWidget
            style="@style/wh_match_wrap"
            app:title="Genres" />

        <com.singidunum.moviesinfoapp.view.DatePickerWidget
            style="@style/wh_match_wrap"
            app:title="Date from" />

        <com.singidunum.moviesinfoapp.view.DatePickerWidget
            style="@style/wh_match_wrap"
            app:title="Date to" />

        <com.singidunum.moviesinfoapp.view.RadioButtonWidget
            style="@style/wh_match_wrap"
            app:title="Languages" />

        <com.singidunum.moviesinfoapp.view.ListFilterWidget
            style="@style/wh_match_wrap"
            app:title="Production houses" />

        <Button
            android:id="@+id/save_filters"
            style="@style/wh_match_wrap.large_button"
            android:text="@string/save_filters" />
    </LinearLayout>
</ScrollView>