<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movies"
    style="@style/wh_wrap.recycler_view_item_layout"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/movie_item_height"
        android:src="@drawable/deadpool2" />

    <LinearLayout
        style="@style/wh_wrap"
        android:layout_marginLeft="@dimen/separation_left_margin"
        android:layout_marginStart="@dimen/separation_left_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            style="@style/wh_wrap"
            android:text="@string/deadpool_2"
            android:textSize="@dimen/headline_extra_small_text_size" />

        <View style="@style/line.thin.gray" />

        <LinearLayout
            style="@style/wh_match_wrap"
            android:layout_marginTop="@dimen/movie_item_horizontal_separation"
            android:orientation="horizontal">

            <TextView
                style="@style/wh_wrap.gravity_center"
                android:text="@string/rating_text" />

            <TextView
                android:id="@+id/rating"
                style="@style/wh_wrap.gravity_center"
                android:layout_marginLeft="@dimen/separation_left_margin"
                android:layout_marginStart="@dimen/separation_left_margin" />

            <ImageView
                style="@style/wh_wrap.gravity_center"
                android:layout_marginLeft="@dimen/separation_left_margin"
                android:layout_marginStart="@dimen/separation_left_margin"
                android:src="@android:drawable/star_off" />
        </LinearLayout>

        <View style="@style/line.thin.gray" />

        <TextView
            android:id="@+id/overview"
            style="@style/wh_wrap"
            android:layout_marginTop="@dimen/movie_item_horizontal_separation"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/deadpool_plot" />
    </LinearLayout>
</LinearLayout>